Fixing footer overlaps

--- a/src/module/commons/src/list/list.scss
+++ b/src/module/commons/src/list/list.scss
@@ -250,6 +250,7 @@
 }
 
 .entryPagination {
+  padding-bottom: 40px;
     margin-left: auto;
     margin-right: auto;
     display: none;
