--- a/src/module/terms/src/concept/style.css
+++ b/src/module/terms/src/concept/style.css
@@ -7,7 +7,7 @@
 .sidebar,
 .conceptmain {
     position: relative;
-    height: 100%;
+    height: calc(100% - 40px); /* height - footer */
     padding-left: 1em;
     padding-right: 1em;
     padding-top: 1em;
